BoaUAT/src/objects/Pricing_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Mins__c</fullName>
        <formula>(Now()-LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Price Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Pricing Policy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>IS_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pricing_policy_date_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>End date must be greater than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_not_less_than_todays_date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE( Start_Date__c ) &lt; TODAY()</errorConditionFormula>
        <errorMessage>Start date should not less than Today&apos;s Date</errorMessage>
    </validationRules>
</CustomObject>